tests/typecheck/fail/alias_constructor_not_record_primitive.tw
// Alias to a primitive type cannot be used as record constructor
type MyInt = Int

fn main() {
    x := MyInt.{ value: 1 }
}
